--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -12,7 +12,9 @@
 		<title></title>
 	</head>
 	<body>
-		{% block content %}{% endblock %}
+		<div class="container">
+			{% block content %}{% endblock %}
+		</div>
 		<!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
