--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -12,7 +12,16 @@
 		<title></title>
 	</head>
 	<body>
-		<div class="container">
+		<div class="container col-md-8">
+			<!-- Display any messages -->
+			{% if messages %}
+				{% for message in messages %}
+					<div class="alert alert-{{ message.tags }}">
+						{{ message }}
+					</div>
+				{% endfor %}
+			{% endif %}
+			<!-- Container for page content -->
 			{% block content %}{% endblock %}
 		</div>
 		<!-- Optional JavaScript; choose one of the two! -->
