--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,12 +1,16 @@
+<!-- Load styling -->
 {% extends "portal/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
+
+<!-- load the Driver Registration form onto the page -->
 	<h1>Driver Registration Page</h1>
 	<div class="content-section">
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
 				<legend class="border-bottom mb-4">Register Now</legend>
-				{{ form }}
+				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group">
 				<button class="btn btn-outline-info" type="submit" name="button">Submit</button>
