--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -1,4 +1,5 @@
 <!-- Serves as the base for all html templates. Includes bootstrap and other themes -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
@@ -9,9 +10,31 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+		<link rel="stylesheet" type="text/css" href="{% static 'portal/main.css' %}">
+
 		<title></title>
 	</head>
 	<body>
+		<header class="site-header">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+        <div class="container">
+          <a class="navbar-brand mr-4" href="#">Good Driver Application</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarToggle">
+            <div class="navbar-nav mr-auto">
+              <a class="nav-item nav-link" href="{% url 'driver-home' %}">Home</a>
+            </div>
+            <!-- Navbar Right Side -->
+            <div class="navbar-nav">
+							<a class="nav-item nav-link" href="#">Logout</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
 		<div class="container col-md-8">
 			<!-- Display any messages -->
 			{% if messages %}
