--- a/portal/templates/portal/driver_home.html
+++ b/portal/templates/portal/driver_home.html
@@ -1,4 +1,8 @@
 {% extends "portal/base.html" %}
 {% block content %}
 	<h1>Driver Home</h1>
+	<div class="media-heading">
+		<h2 class="account-heading">{{ user.username }}</h2>
+		<p class="text-secondary">{{ user.email }}</p>
+	</div>
 {% endblock content%}
