--- a/portal/templates/portal/driver_home.html
+++ b/portal/templates/portal/driver_home.html
@@ -1,8 +1,18 @@
 {% extends "portal/base.html" %}
 {% block content %}
-	<h1>Driver Home</h1>
-	<div class="media-heading">
-		<h2 class="account-heading">{{ user.username }}</h2>
-		<p class="text-secondary">{{ user.email }}</p>
+	<div class="row">
+		<div class="col-md-12 d-flex justify-content-center">
+			<h1>Driver Home</h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<div class="media-heading">
+				<h2 class="account-heading">{{ user.username }}</h2>
+				<p class="text-secondary">{{ user.email }}</p>
+				<p class="text-secondary">{{ points }} points</p>
+			</div>
+		</div>
+		</div>
 	</div>
 {% endblock content%}
