added sponsor registration form at sponsor_register

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <!-- load the Driver Registration form onto the page -->
-	<h1>Driver Registration Page</h1>
+	<h1>Registration Page</h1>
 	<div class="content-section">
 		<form method="POST">
 			{% csrf_token %}
