Added points, login/logout show functionality

--- a/portal/templates/portal/driver_home.html
+++ b/portal/templates/portal/driver_home.html
@@ -11,6 +11,9 @@
 				<h2 class="account-heading">{{ user.username }}</h2>
 				<p class="text-secondary">{{ user.email }}</p>
 				<p class="text-secondary">{{ points }} points</p>
+				<!-- {% if points <= -1 %}
+					<p class="text-secondary">Point Status: Bad</p>
+				{% endif %} -->
 			</div>
 		</div>
 		</div>
