--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -28,7 +28,12 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-							<a class="nav-item nav-link" href="#">Logout</a>
+							{% if user.is_authenticated %}
+								<a class="nav-item nav-link" href="#">Logout</a>
+							{% else %}
+							<a class="nav-item nav-link" href="#">Login</a>
+							<a class="nav-item nav-link" href="#">Register</a>
+							{% endif %}
             </div>
           </div>
         </div>
