fixed homepage routing, now homepage and login routing work perfectly, even in navbar links

--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -24,7 +24,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{% url 'driver-home' %}">Home</a>
+              <a class="nav-item nav-link" href="{% url 'portal_home' %}">Home</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
