--- a/portal/templates/portal/driver_home.html
+++ b/portal/templates/portal/driver_home.html
@@ -19,7 +19,7 @@
 		<div class="col-md-6">
 			<h2 class="media-heading d-flex justify-content-center">Point History</h2>
 			{% if point_hist %}
-				<table class=table>
+				<table class="table">
 					<tr>
 						<th scope="col">Point Amount</th>
 						<th scope="col">Date</th>
@@ -36,7 +36,7 @@
 					{% endfor %}
 				</table>
 			{% else %}
-				<p class=text-secondary>No Point History To Display</p>
+				<p class="text-secondary">No Point History To Display</p>
 			{% endif %}
 		</div>
 	</div>
