Fixed broken migrations, commented code for sponsor_driver_list temporarily

--- a/portal/templates/portal/sponsor_home.html
+++ b/portal/templates/portal/sponsor_home.html
@@ -15,11 +15,11 @@
 				<p class="text-secondary">{{ user.first_name }}</p>
 				<p class="text-secondary">{{ user.last_name }}</p>
 				<!-- TODO: how do i print this array of names? this may work but im honestly not sure.  -->
-				<p class="text-secondary">{{ user.drivers_list_usernames }} drivers_list_usernames</p>
+				<!-- <p class="text-secondary">{{ user.drivers_list_usernames }} drivers_list_usernames</p> -->
 			</div>
 		</div>
 	</div>
 
 	<!-- For Adding A new driver... Does admin have to do this or can a sponsor??? -->
-	
-{% endblock content%}	
+
+{% endblock content%}
