Changed Admin to Generic Admin, added a new field to Sponsor_class

--- a/portal/templates/portal/sponsor_home.html
+++ b/portal/templates/portal/sponsor_home.html
@@ -19,7 +19,21 @@
 			</div>
 		</div>
 	</div>
+	
+			<!-- This is updating sponsor info
+	<div class="row">
+		<div class="col-md-4">
+			<div class="content-section">
+				<div class="media-heading">
+					<p class="text-secondary">{{ user.username }}</p>
+					<p class="text-secondary">{{ user.email }}</p>
+					<a href="{% url 'update-info' %}">Edit Profile Information</a>
+				</div>
+			</div>
+		</div>
+	</div> -->
 
-	<!-- For Adding A new driver... Does admin have to do this or can a sponsor??? -->
+
+
 
 {% endblock content%}
