--- a/portal/templates/portal/driver_home.html
+++ b/portal/templates/portal/driver_home.html
@@ -1,4 +1,5 @@
 {% extends "portal/base.html" %}
+{% load static %}
 {% block content %}
 	<div class="row">
 		<div class="col-md-12 d-flex justify-content-center">
@@ -10,16 +11,17 @@
 			<h2 class="account-heading">Welcome, {{ first_name }} {{ last_name }}</h2>
 			<div class="content-section">
 				<div class="media-heading">
-					<h5 class="text-secondary">Current Point Balance: {{ points }} points</h5>
-				</div>
-			</div>
-			<div class="content-section">
-				<div class="media-heading">
+					<img class="rounded-circle account-img img-fluid" src="{{ profile_photo }}">
 					<p class="text-secondary">{{ user.username }}</p>
 					<p class="text-secondary">{{ user.email }}</p>
 					<p class="text-secondary">{{ phone_num }}</p>
 					<p class="text-secondary">{{ address }}</p>
 					<a href="{% url 'update-info' %}">Edit Profile Information</a>
+				</div>
+			</div>
+			<div class="content-section">
+				<div class="media-heading">
+					<h5 class="text-secondary">Current Point Balance: {{ points }} points</h5>
 				</div>
 			</div>
 		</div>
