profile photo update working for Driver, will add sponsor when Colin posts Sponsor home page code

--- a/portal/templates/portal/driver_home.html
+++ b/portal/templates/portal/driver_home.html
@@ -10,7 +10,7 @@
 		<div class="col-md-6">
 			<h2 class="account-heading">Welcome, {{ first_name }} {{ last_name }}</h2>
 			<div class="content-section">
-				<div class="media-heading">
+				<div class="media-body">
 					<img class="rounded-circle account-img img-fluid" src="{{ profile_photo }}">
 					<p class="text-secondary">{{ user.username }}</p>
 					<p class="text-secondary">{{ user.email }}</p>
