fixed registration image processing, removed image resizing for storing, added resizing on page view

--- a/portal/templates/portal/driver_home.html
+++ b/portal/templates/portal/driver_home.html
@@ -11,7 +11,7 @@
 			<h2 class="account-heading">Welcome, {{ first_name }} {{ last_name }}</h2>
 			<div class="content-section">
 				<div class="media-body">
-					<img class="rounded-circle account-img img-fluid" src="{{ profile_photo }}">
+					<img class="rounded-circle account-img" width="70%" height="auto" src="{{ profile_photo }}">
 					<p class="text-secondary">{{ user.username }}</p>
 					<p class="text-secondary">{{ user.email }}</p>
 					<p class="text-secondary">{{ phone_num }}</p>
