--- a/portal/templates/portal/driver_home.html
+++ b/portal/templates/portal/driver_home.html
@@ -48,5 +48,29 @@
 				<p class="text-secondary">No Point History To Display</p>
 			{% endif %}
 		</div>
+		<div class="col-md-6">
+			<h2 class="media-heading d-flex justify-content-center">Applications</h2>
+			{% if applications %}
+				<table class="table">
+					<tr>
+						<th scope="col">Sponsor</th>
+						<th scope="col">Date</th>
+						<th scope="col">Status</th>
+					</tr>
+					{% for item in applications reversed %}
+						<tbody>
+							<tr>
+								<td>{{ item.sponsor_company }}</td>
+								<td>{{ item.date }}</td>
+								<td>{{ item.status }}</td>
+							</tr>
+						</tbody>
+					{% endfor %}
+				</table>
+			{% else %}
+				<p class="text-secondary">No Applications To Display</p>
+			{% endif %}
+			<a href="{% url 'apply' %}">Apply For Sponsorship!</a>
+		</div>
 	</div>
 {% endblock content%}
