--- a/portal/templates/portal/sponsor_home.html
+++ b/portal/templates/portal/sponsor_home.html
@@ -33,7 +33,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 			<!-- This is updating sponsor info
 	<div class="row">
 		<div class="col-md-4">
@@ -46,6 +46,30 @@
 			</div>
 		</div>
 	</div> -->
+
+	<div class="col-md-6">
+		<h2 class="media-heading d-flex justify-content-center">Driver Applications</h2>
+		{% if applications %}
+			<table class="table">
+				<tr>
+					<th scope="col">Driver Username</th>
+					<th scope="col">Date</th>
+					<th scope="col">Status</th>
+				</tr>
+				{% for item in applications reversed %}
+					<tbody>
+						<tr>
+							<td>{{ item.driver }}</td>
+							<td>{{ item.date }}</td>
+							<td>{{ item.status }}</td>
+						</tr>
+					</tbody>
+				{% endfor %}
+			</table>
+		{% else %}
+			<p class="text-secondary">No Applications To Display</p>
+		{% endif %}
+	</div>
 
 
 
