added frontend functionality for driver viewing multiple sponsor points

--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -52,6 +52,7 @@
 			<!-- Container for page content -->
 			{% block content %}{% endblock %}
 		</div>
+		<footer><br><br></footer>
 		<!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
