--- a/portal/templates/portal/sponsor_home.html
+++ b/portal/templates/portal/sponsor_home.html
@@ -1,4 +1,4 @@
-{% extends "portal/base_sponsor.html" %}
+{% extends "portal/base.html" %}
 {% block content %}
 	<div class="row">
 		<div class="col-md-12 d-flex justify-content-center">
@@ -6,7 +6,7 @@
 			<!-- TODO: WANT TO ADD IN SPONSOR NAME HERE, SOME KIND OF WELCOME MESSAGE WOULD BE NICE -->
 		</div>
 	</div>
-
+	
 	<div class="row">
 		<div class="col-md-5">
 			<h2 class="account-heading">Welcome, {{ first_name }} {{ last_name }}</h2>
@@ -20,16 +20,6 @@
 				</div>
 				<!-- TODO: how do i print this array of names? this may work but im honestly not sure.  -->
 				<!-- <p class="text-secondary">{{ user.drivers_list_usernames }} drivers_list_usernames</p> -->
-			</div>
-		</div>
-
-		<div class="col-md-5">
-			<h2 class="account-heading">Drivers</h2>
-			<div class="content-section">
-				<div class="media-heading">
-					<h5 class="text-secondary">Current Drivers:</h5>
-					<p class="text-secondary"> {{ my_drivers }}<p>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -46,6 +36,40 @@
 			</div>
 		</div>
 	</div> -->
+	<div class="col-md-12">
+		<h2 class="media-heading d-flex justify-content-center">Your Driver List</h2>
+		{% if my_drivers %}
+			<table class="table">
+				<tr>
+					<th scope="col">First Name</th>
+					<th scope="col">Last Name</th>
+					<th scope="col">Username</th>
+					<th scope="col"># of Points</th>
+					<th scope="col">Edit Points</th>
+
+				</tr>
+				{% for item in my_drivers reversed %}
+					<tbody>
+						<tr>
+							<td>{{ item.first_name }}</td>
+							<td>{{ item.last_name }}</td>
+							<td>{{ item.username }}</td>
+							<td>{{ item.points }}</td>
+							<td>
+								<form action="{% url 'update-points' %}" method="POST">
+									{% csrf_token %}
+									<button type="submit" name="driver_username" value="{{item.username}}" class="btn btn-success">Edit</button>
+								</form>
+							</td>
+						</tr>
+					</tbody>
+				{% endfor %}
+			</table>
+		{% else %}
+			<p class="text-secondary">No Drivers To Display</p>
+		{% endif %}
+	</div>
+
 
 	<div class="col-md-6">
 		<h2 class="media-heading d-flex justify-content-center">Driver Applications</h2>
