Driver Catalog fully added

--- a/portal/templates/portal/driver_home.html
+++ b/portal/templates/portal/driver_home.html
@@ -1,4 +1,4 @@
-{% extends "portal/base.html" %}
+{% extends "portal/base_driver.html" %}
 {% load static %}
 {% block content %}
 	<div class="row">
