--- a/portal/templates/portal/sponsor_home.html
+++ b/portal/templates/portal/sponsor_home.html
@@ -1,4 +1,4 @@
-{% extends "portal/base.html" %}
+{% extends "portal/base_sponsor.html" %}
 {% block content %}
 	<div class="row">
 		<div class="col-md-12 d-flex justify-content-center">
@@ -8,7 +8,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-md-5">
+		<div class="col-md-6">
 			<h2 class="account-heading">Welcome, {{ first_name }} {{ last_name }}</h2>
 			<div class="content-section">
 				<div class="media-heading">
@@ -21,6 +21,11 @@
 				<!-- TODO: how do i print this array of names? this may work but im honestly not sure.  -->
 				<!-- <p class="text-secondary">{{ user.drivers_list_usernames }} drivers_list_usernames</p> -->
 			</div>
+		</div>
+		<div class="col-md-6">
+			<h2 class="account-heading d-flex justify-content-center">Report Generation</h2>
+			<p class="text-secondary d-flex justify-content-center">To generate a Driver Point Tracking report, click the link below!</p>
+			<a class="d-flex justify-content-center" href="{% url 'generate-driver-points' %}">Generate Report</a>
 		</div>
 	</div>
 
