working sponsor report

--- a/portal/templates/portal/generate_driver_points.html
+++ b/portal/templates/portal/generate_driver_points.html
@@ -1,5 +1,5 @@
 <!-- Load styling -->
-{% extends "portal/base.html" %}
+{% extends "portal/base_sponsor.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
 	<div class="content-section">
