fixed driver points in the catalog view

--- a/portal/templates/portal/driver_catalogs.html
+++ b/portal/templates/portal/driver_catalogs.html
@@ -18,7 +18,7 @@
 		<tbody>
 			<tr>
 				<td>{{ sponsor.sponsor_company }}</td>
-				<td>0</td>
+				<td>{{ sponsor.driver_points }}</td>
 				<td><a href="{% url 'driver-product-home' 8 1 sponsor.sponsor_company %}">products</a></td>
 			</tr>
 		</tbody>
