fixed driver points in the catalog view

--- a/portal/templates/portal/Order_Placed.html
+++ b/portal/templates/portal/Order_Placed.html
@@ -5,16 +5,16 @@
 			<h1></h1>
 		</div>
 </div>
-{%if placed%}
+{%if oop%}
 <div class="row">
 		<div class="col-md-12">
-			<h1>Order Placed Successfully</h1>
+			<h1>Insufficient points. Please return to the cart and remove an item.</h1>
 		</div>
 </div>
 {%else%}
 <div class="row">
 		<div class="col-md-12">
-			<h1>Insufficient points. Please remove an item.</h1>
+			<h1>Order Placed Successfully</h1>
 		</div>
 </div>
 	{% endif %}
