--- a/portal/templates/portal/base_driver.html
+++ b/portal/templates/portal/base_driver.html
@@ -26,8 +26,8 @@
 			  <div class="navbar-nav mr-auto">
 			  	<a class="nav-item nav-link" href="{% url 'portal_home' %}">Home</a>
 			  	<a class="nav-item nav-link" href="{% url 'driver-catalogs' %}">Catalog</a>
-				<a class="nav-item nav-link" href="{% url 'Cart' %}">Cart</a>
-				  <a class="nav-item nav-link" href="{% url 'Order-History' %}">Past Orders</a>
+				<a class="nav-item nav-link" href="{% url 'Cart' 1 %}">Cart</a>
+				<a class="nav-item nav-link" href="{% url 'Order-History' 1 %}">Past Orders</a>
 			  </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
