--- a/portal/templates/portal/product_detail.html
+++ b/portal/templates/portal/product_detail.html
@@ -16,7 +16,7 @@
 			<h1>{{item.price}}{{item.currency_code}}</h1>
 		</div>
 </div>
-<form action="{% url 'product-detail' item.listing_id  %}" method="post">
+<form action="{% url 'product-detail' item.listing_id sponsor_company %}" method="post">
 							{% csrf_token %}
 							<button id="product-chosen" type="submit" name="product-chosen" value="{{ item.listing_id }}"  class="btn btn-success">Add to Cart</button>
 						</form>
