--- a/portal/templates/portal/base_sponsor.html
+++ b/portal/templates/portal/base_sponsor.html
@@ -32,6 +32,7 @@
             <div class="navbar-nav">
 							{% if user.is_authenticated %}
 								<a class="nav-item nav-link" href="{% url 'home' %}">Profile</a>
+								<a class="nav-item nav-link" href="{% url 'driver-home' %}">View as Driver</a>
 								<a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
 							{% else %}
 							<a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
