--- a/portal/templates/portal/base_driver.html
+++ b/portal/templates/portal/base_driver.html
@@ -1,4 +1,4 @@
-<!-- Serves as the base for all html templates. Includes bootstrap and other themes -->
+﻿<!-- Serves as the base for all html templates. Includes bootstrap and other themes -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
