--- a/portal/templates/portal/product_detail.html
+++ b/portal/templates/portal/product_detail.html
@@ -7,6 +7,9 @@
 		</div>
 </div>
 <div class="row">
+    <img class="Product-Image" src="{{item.image}}" width="170" height="135">
+</div>
+<div class="row">
 	<div class="col-md-10">
 			<h1>{{item.description}}</h1>
 		</div>
