Made point scalars work on Driver's end. Fixed some bugs in the Cart. Fixed(?) order statuses.

--- a/portal/templates/portal/Order_Placed.html
+++ b/portal/templates/portal/Order_Placed.html
@@ -22,7 +22,7 @@
 			<h1>Order Placed Successfully</h1>
 		</div>
 	{% endif %}
-	<form action="{% url 'Order-History' 1 %}" method="post">
+	<form action="{% url 'Order-History' %}" method="post">
 		{% csrf_token %}
 		<button id="product-chosen" type="submit" name="product-chosen" value="bruh" class="btn btn-success">Go to Orders</button>
 	</form>
