--- a/portal/templates/portal/Cart.html
+++ b/portal/templates/portal/Cart.html
@@ -15,7 +15,6 @@
 			<th scope="col">Sponsor</th>
 			<th scope="col">Price</th>
 			<th scope="col">Date Placed</th>
-			<th scope="col"></th>
 		</tr>
 	{% for item in cartItems reversed %}
 	<tbody>
@@ -24,6 +23,7 @@
 				<!--<td>{{ item.product.sponsor_company }}</td>-->
 				<td>{{ item.sponsor_company }}</td>
 				<td>{{ item.price }}</td>
+				<td>{{ item.date }}</td>
 				<td>{{ item.date }}</td>
 				<td>
 					<form action="{% url 'Cart' current_page_number %}" method="post">
@@ -44,17 +44,10 @@
 				<td></td>
 				<td></td>
 				<td></td>
-				
-				<td>
-					{% if realDriver is False %}
-					<form action="{% url 'Cart' current_page_number %}" method="post">
-						{% csrf_token %}
-						<button id="place-order-override" type="submit" name="place-order-override" value="{{ 1 }}" class="btn btn-success">Place Order (Override)</button>
-					</form>
-					{% endif %}
-
-				</td>
-				
+				<td><form action="{% url 'Cart' current_page_number %}" method="post">
+					{% csrf_token %}
+					<button id="place-order-override" type="submit" name="place-order-override" value="{{ 1 }}" class="btn btn-success">Place Order (Override)</button>
+					</form></td>
 
 				</tr>
 		</tbody>
