--- a/portal/templates/portal/Cart.html
+++ b/portal/templates/portal/Cart.html
@@ -24,7 +24,6 @@
 				<td>{{ item.sponsor_company }}</td>
 				<td>{{ item.price }}</td>
 				<td>{{ item.date }}</td>
-				<td>{{ item.date }}</td>
 				<td>
 					<form action="{% url 'Cart' current_page_number %}" method="post">
 							{% csrf_token %}
@@ -44,10 +43,14 @@
 				<td></td>
 				<td></td>
 				<td></td>
-				<td><form action="{% url 'Cart' current_page_number %}" method="post">
-					{% csrf_token %}
-					<button id="place-order-override" type="submit" name="place-order-override" value="{{ 1 }}" class="btn btn-success">Place Order (Override)</button>
-					</form></td>
+				<td>
+					{% if realDriver is False %}
+					<form action="{% url 'Cart' current_page_number %}" method="post">
+						{% csrf_token %}
+						<button id="place-order-override" type="submit" name="place-order-override" value="{{ 1 }}" class="btn btn-success">Place Order (Override)</button>
+					</form>
+					{% endif %}
+				</td>
 
 				</tr>
 		</tbody>
