--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -18,7 +18,11 @@
 		</form>
 		<div class="border-top pt-3">
 			<small class="text-muted">
-				Don't have an account? <a class="ml-2" href="{% url 'driver_register' %}">Register Here</a>
+				Don't have an account?<a class="ml-2" href="{% url 'driver_register' %}">Register Here</a>
+			</small>
+			<br>
+			<small class="text-muted">
+				Forgot Password? <a class="m1-2" href="{% url 'password_reset' %}">Reset Here</a>
 			</small>
 		</div>
 	</div>
