--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -1,12 +1,15 @@
-{% extends 'base.html' %}
+{% extends "portal/base.html" %}
 
 {% block title %}Change Password Page{% endblock title %}
 
 {% block content %}
+	
+	{% load crispy_forms_tags %}
+
 	<h2>Change Password</h2>
-	<form method="post">
+	<form method="POST">
 		{% csrf_token %}
-		{{ form.as_p }}
+		{{ password_reset_form|crispy }}
 		<a href="{% url 'home' %}">Back</a>
 		<button type="submit">Submit</button>
 	</form>
