Added pictures back to driver catalog

--- a/portal/templates/portal/driver_product_home.html
+++ b/portal/templates/portal/driver_product_home.html
@@ -25,15 +25,16 @@
 		{% for item in items reversed %}
 		<tbody>
 			<tr>
+				<td><img class="Product-Image" src="{{item.image}}" width="170" height="135"> </td>
 				<td><a href="{% url 'product-detail' item.listing_id sponsor_company %}">{{ item.title }}</a></td>
 				<td>{{ item.price }}</td>
 				<td>{{ item.currency_code }}</td>
 				<td>{{ item.description }}</td>
 				<td>
 					<form action="{% url 'driver-product-home' products_per_page current_page_number sponsor_company %}" method="post">
-							{% csrf_token %}
-							<button id="product-chosen" type="submit" name="product-chosen" value="{{ item.listing_id }}"  class="btn btn-success">Add to Cart</button>
-						</form>
+						{% csrf_token %}
+						<button id="product-chosen" type="submit" name="product-chosen" value="{{ item.listing_id }}" class="btn btn-success">Add to Cart</button>
+					</form>
 				</td>
 			</tr>
 		</tbody>
