--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -1,4 +1,4 @@
-<!-- Serves as the base for all html templates. Includes bootstrap and other themes -->
+﻿<!-- Serves as the base for all html templates. Includes bootstrap and other themes -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
@@ -7,6 +7,7 @@
 		<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Good Driver Program</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
