--- a/portal/templates/portal/product_detail.html
+++ b/portal/templates/portal/product_detail.html
@@ -7,7 +7,7 @@
 		</div>
 </div>
 <div style="text-align: center;">
-    <img class="Product-Image" src="{{item.image}}" width="400" height="400">
+    <img class="Product-Image" src="{{item.image}}" width="100%" height="auto">
 </div>
 <div class="row">
 	<div class="col-md-10">
