--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -8,7 +8,7 @@
 	<p>Please enter your new password.</p>
 	<form method="POST">
 		{% csrf_token %}
-		{{ form|crispy }}
+		{{ password_update_form|crispy }}
 		<button type="submit">Reset password</button>
 	</form>
 
