--- a/portal/templates/portal/driver_product_home.html
+++ b/portal/templates/portal/driver_product_home.html
@@ -17,6 +17,7 @@
 {% if items %}
 	<table class="table">
 		<tr>
+			<th scope="col"></th>
 			<th scope="col">Product</th>
 			<th scope="col">Price</th>
 			<th scope="col">Description</th>
